# AudioVideoTransApp

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fragment_filter_display.glsl
app/src/main/cpp/: AudioDataEncoder.cpp  AudioDataEncoder.h  CMakeLists.txt  EGLDisplayYUV.cpp  EGLDisplayYUV.h  GlobalContexts.cpp  GlobalContexts.h  LogUtils.h  SafeQueue.cpp  SafeQueue.h  ShaderUtils.cpp  ShaderUtils.h  ShaderYUV.cpp  ShaderYUV.h  VideoDataEncoder.cpp  VideoDataEncoder.h  native-lib.cpp
app/src/main/java/com/soft/audiovideotransapp/: MainActivity.java
app/src/main/java/com/soft/function/: AudioRecordHelper.java  BaseActivity.java  CameraHelper.java  FunctionControl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
